# rl-coursework

./: README.md  environment.yml  pyproject.toml
src/rltoolbox/: action.py  action_estimate.py  policy.py
src/tests/test_rltoolbox/: test_rltoolbox.py
tasks/cliff_problem/: Cliff_problem.ipynb  algorithms.py  cliff_game.py  plotting.py  test_cliff_problem.py
tasks/gambler_problem/: Gambler problem.ipynb  Gambler_problem.ipynb  test_utils.py  utils.py
tasks/multi_armed_bandits/: Multi-Armed Bandits.ipynb  Multi-Armed_Bandits.ipynb  action.py  action_estimate.py  policy.py  policy_runner.py
tasks/td_with_fa/: TD_learning_with_function_approximation.ipynb  algorithms.py  problem.py
