[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rltoolbox"
version = "0.0.1"
authors = [
  { name="Dominika Dlugosz", email="dominika.dlugosz@tecnico.ulisboa.pt" }
]
description = "Code for assignments in Reinforcement Learning course, University of Lisbon, autumn semester 2025/2026"
readme = "README.md"
requires-python = ">= 3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "progressbar2",
    "tqdm",
    "coloredlogs"
]
[project.urls]
"Homepage" = "https://github.com/the-mysh/rl-coursework"

[tool.setuptools.packages.find]
where = ["src"]
